# JSON-Article-Search-Engine

./: .gitignore  .gitmodules  Article.h  CMakeLists.txt  Processor.cpp  Processor.h  QueryBuilder.cpp  QueryBuilder.h  README.md  SearchEngine.h  StopWords.h  TableBundle.h  catch_setup.h  main.cpp  run.sh  search_engine.cpp  search_engine.h  typedefs.h  utils.cpp  utils.h
CatchTests/: catch_setup.cpp
DS_AVL_Tree/: DS_AVL_Tree.h
HashOrderedMap/: HashOrderedMap.h  HashOrderedMap_tests.cpp
Processor/: Processor.cpp  Processor.h
ProgressBar/: ProgressBar.h
QueryBuilder/: QueryBuilder.cpp  QueryBuilder.h
SearchEngine/: SearchEngine.cpp  SearchEngine.h
avl_tree/: avl_friends.cpp  avl_tests.cpp  avl_tree.h  avl_tree_io.h  buildCorpus.txt
data/small_articles/: badfile.txt
hash_ordered_map/: hash_ordered_map.h  hash_ordered_map_tests.cpp  test_Oedipus-King-of-Thebes.txt
hash_table/: hash_ordered_map_tests.cpp  hash_table.h
include/cereal/: cereal.hpp
include/cereal/details/: helpers.hpp
include/cereal/types/: memory.hpp  polymorphic.hpp
include/porter2_stemmer/: porter2_stemmer.h
utilities/: Article.h  Pipelines.cpp  Pipelines.h  ProgressBar.h  StopWords.h  typedefs.h
